updated download links

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/hamstar/Braincase/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/hamstar/Braincase/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/downloads/hamstar/Braincase/braincase_0.4.11-sprint1_all.deb" id="download-deb" class="button"><span>Download .deb</span></a>
+          <a href="#" id="download-vmdk" class="button"><span>Download .vmdk</span></a>
           <a href="https://github.com/hamstar/Braincase" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
