added more information

--- a/index.html
+++ b/index.html
@@ -31,11 +31,34 @@
         <hr>
 
         <section id="main_content">
-          <h2>Braincase</h2>
+          <h2>Welcome</h2>
 
-<p>A personal knowledge base system for expansion of the mind in a virtual space.</p>
+          <p>Braincase is a web based personal knowledge base that uses the <a href="http://www.dokuwiki.org/">Dokuwiki</a> wiki software.  It is a self contained system that is meant to be installed by itself on the Debian Operating System.</p>
 
-<p>Please see the Braincase <a href="https://github.com/hamstar/Braincase/wiki">Wiki</a> and <a href="https://github.com/hamstar/Braincase/issues">Issues</a> for more information.</p>
+          <p>Please see the Braincase <a href="https://github.com/hamstar/Braincase/wiki">Wiki</a>, <a href="https://github.com/hamstar/Braincase/wiki/Getting-Started-with-Braincase">Getting Started Guide</a> and <a href="https://github.com/hamstar/Braincase/issues">Issues</a> for more information.</p>
+
+          <h2>Vision</h2>
+
+          <p>Braincase is a Personal Knowledge Base (PKB). In common with other such systems it allows the person using it to capture, organise and expand their knowledge (Davies, 2011). Braincase allows the user to structure their knowledge into a collection of interrelated documents, not limited to any specific media type. The same data can be viewed from different perspectives through hierarchies and categories in order to make knowledge easily retrievable at a later date. This general type of mind-mapping through different media types helps the user to develop ideas by providing a framework for their knowledge.</p>
+
+          <p>Braincase actively protects knowledge it contains by automatically backing it up to variety of configurable locations over secure connections. This ensures that knowledge belonging to the user is preserved and remains accessible to them for as long as needed. This means the user can still access their knowledge in multiple scenarios in which a particular deployment of Braincase is rendered unavailable such as hardware or software failures or sudden access restrictions. The user need not worry about changing organisations, schools or hosting providers, but retains freedom and control over their own data.</p>
+
+          <p>Braincase users are not reliant on Braincase for continued access to their knowledge. By making it easy to extract knowledge in a variety of open formats this knowledge can then be imported to other software. However backups are encrypted to prevent sensitive data from unauthorised access. Data is protected during transmission to and from the user by the use of secure connections. This provides benefits such as identity, data integrity and confidentiality (Shema, 2011).</p>
+
+          <p>Braincase also protects the user from themselves by providing version control. When the user makes changes to knowledge assets old versions are retained. This allows any mistakes made by changes to the asset to be rectified by reverting to a previous version. The user can also view the changes that led to the current version to "illuminate the creative process" (Doctorow, 2009).</p>
+
+          <p>Braincase deployments provide a centralised point to access knowledge on the Internet via standard protocols. This allows the user to access their knowledge from multiple locations and devices. Users can store and access their files as they would any other knowledge assets and have access to those files from anywhere. The files are also accessible as a version controlled repository.</p>
+
+          <p>Braincase provides facilities to expose knowledge on the web. One Braincase deployment can support multiple users and provides access control features allowing users to share their knowledge and collaborate with peers. This promotes the joining of minds, accelerating the expansion of knowledge and ideas.</p>
+
+          <h3>References</h3>
+          <ul>
+            <li>Davies, Stephen. (2011). Still Building the Memex. Communications of the ACM, 54(2), 80-88</li>
+            <li>Thompson, Kerry. (2007). Backup Encryption. Retrieved from http://www.crypt.gen.nz/papers/backup_encryption.html</li>
+            <li>JISC Digital Media (2008). Sustainability of Digital Collections. Retrieved from http://www.jiscdigitalmedia.ac.uk/crossmedia/advice/sustainability-of-digital-collections/</li>
+            <li>Shema, Mike (2011). Web Security: Why You Should Always Use HTTPS. Retrieved from http://mashable.com/2011/05/31/https-web-security/</li>
+            <li>Doctorow, Cory (2009). Flashbake: Free version-control for writers using git. Retrieved from http://www.boingboing.net/2009/02/13/flashbake-free-versi.html</li>
+          </ul>
         </section>
 
         <footer>
